# Vodle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  vodle.db
backend/: .dockerignore  Dockerfile  pyproject.toml  vodle.db
backend/data/: vodle.db
backend/scripts/: create_admin.py  generate_daily_questions.py  reset_question_data.py  seed_daily_questions.py
backend/src/app/: main.py
backend/src/app/core/: authentication.py  database.py  dates.py  settings.py
backend/src/app/data/: __init__.py  question_bank.py
backend/src/app/exceptions/: login_excs.py  other_excs.py
backend/src/app/models/: option.py  question.py  user.py  vote.py
backend/src/app/repository/: option.py  question.py  user.py  vote.py
backend/src/app/routes/: question.py  user.py  vote.py
backend/src/app/schemas/: option.py  question.py  user.py  vote.py
backend/src/app/services/: question.py  question_generation.py  user.py  vote.py
backend/src/test/: conftest.py  test_option_routes.py  test_question_bank.py  test_question_routes.py  test_user_routes.py  test_vote_routes.py
frontend/: .gitignore  Dockerfile  components.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
src/: requirements.txt  test.db  vodle.db
src/app/: main.py
src/test/: conftest.py  test_option_routes.py  test_question_routes.py  test_user_routes.py  test_vote_routes.py
src/voting_website.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+67 files in other folders)
