[project]
name = "voting-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.133.0",
    "jwt>=1.4.0",
    "pre-commit>=4.5.1",
    "pwdlib>=0.3.0",
    "ruff>=0.15.2",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.41.0",
]
