[project]
name = "voting-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.133.0",
    "PyJWT>=2.0.0",
    "pre-commit>=4.5.1",
    "pwdlib[argon2]>=0.3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.30.0",
    "psycopg2-binary>=2.9"
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
